--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "vuepress-plugin-flowchart": "1.5.0",
     "vuepress-plugin-reading-progress": "1.0.10",
     "vuepress-theme-reco": "1.6.16"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
