--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
         {
           "src": "package.json",
           "use": "@vercel/static-build",
-          "config": { "distDir": "/docs/.vuepress/dist" }
+          "config": { "distDir": "docs/.vuepress/dist" }
         }
       ]
 }
