--- a/.github/main.yml
+++ b/.github/main.yml
@@ -22,4 +22,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.3.3
         with:
           branch: gh-pages
-          folder: .vitepress/dist
+          folder: ./docs/.vuepress/dist
