--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev": "vuepress dev docs",
-    "docs:build": "vuepress build",
+    "docs:build": "NODE_OPTIONS=--openssl-legacy-provider && vuepress build",
     "docs:deploy": "bash deploy.sh"
   },
   "dependencies": {
