feat: 更新类别目录

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "vuepress dev docs",
+    "serve": "vuepress dev docs",
     "docs:build": "NODE_OPTIONS=--openssl-legacy-provider && vuepress build docs/.",
     "docs:deploy": "bash deploy.sh"
   },
